Fix styling for code blocks
- Use monospace font
- Fix margins and paddings
- Add horizontal scroll bar

Note that after this change, all posts need to be modified. This
commit adds a left margin for the code block. In all previous posts,
code inside the code blocks was indented by 4 spaces. This causes them
to shift more to the right. It will be fixed in a later commit.

--- a/naiq/static/css/main.css
+++ b/naiq/static/css/main.css
@@ -50,9 +50,9 @@ dl dd { margin-bottom: 10px; }
 .genTitle { color: #073642; margin-bottom: 5px; }
 
 /** Overrides for Code highlight style */
-code { font-size: 0.9em; padding: 1px; }
+code { font-family: "Roboto Mono", Courier, monospace; }
 code:not(.highlight code) { color: #cb4b16; background: #f8f8f8; }
-.highlight { border-left: 5px solid #268bd2; }
-.highlight pre { font-size: 0.9em; padding: 10px 0px; font-family: Courier, Arial; border: 1px solid #fefefe; }
+.highlight { whitespace: no-wrap; overflow: auto; padding: 20px; }
+.highlight pre { border: 1px solid #f5f5f5; margin: 0; }
 
 blockquote { margin-left: 0; padding-left: 20px; color: #333; font-style: italic; border-left: 5px solid #666; }
